--- a/cupon.html
+++ b/cupon.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Favicon añadido aquí -->
+  <!-- Favicons y manifest -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-  <title>Cupón Feria Online — Versión Profesional</title>
+  <!-- Para móviles -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+  <!-- Android / “Añadir a pantalla de inicio” -->
+  <link rel="manifest" href="site.webmanifest">
+
+  <title>Cupón Feria Online</title>
   <style>
     :root{
       --bg1: #e3f2fd;
@@ -181,7 +189,6 @@
       return sinIva;
     }
 
-    // MENSAJE FINAL SIN LA ÚLTIMA LÍNEA
     function generarMensaje() {
       const oportunidad = oportunidadInput.value.trim();
       const provincia   = provinciaInput.value.trim();
@@ -282,6 +289,7 @@ Contacto: ${contacto}`;
     btnPagado.classList.add('active');
     actualizarVistaPrevia();
   </script>
+
   <button onclick="window.location.href='index.html'" style="margin: 40px auto; display: block; padding: 14px 32px; font-size: 1.2rem; font-weight: bold; color: white; background: #607d8b; border: none; border-radius: 10px; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
     ← Volver al Menú
   </button>
