--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Herramientas Educiona</title>
+
+  <!-- Favicons -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -52,6 +58,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <h1>Herramientas Educiona</h1>
