Fix HTML encoding issues in cupon.html

--- a/cupon.html
+++ b/cupon.html
@@ -15,7 +15,7 @@
   <!-- Android / “Añadir a pantalla de inicio” -->
   <link rel="manifest" href="site.webmanifest">
 
-  <title>Cupón Feria Online</title>
+  <title>Cupón Feria</title>
   <style>
     :root{
       --bg1: #e3f2fd;
@@ -77,7 +77,7 @@
 </head>
 <body>
   <div class="container" role="main">
-    <h2>🎟️ Cupón Feria Online 🎟️</h2>
+    <h2>🎟️ Cupón Feria 🎟️</h2>
 
     <div class="field-group">
       <label for="oportunidad">Oportunidad (nombre del colegio) *</label>
