Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div class="menu-buttons">
     <a href="testimonio.html" class="btn">📝 Testimonio Educiona 📝</a>
-    <a href="cupon.html" class="btn">🎟️ Cupón Feria Online 🎟️</a>
+    <a href="cupon.html" class="btn">🎟️ Cupón Feria 🎟️</a>
     <a href="horario.html" class="btn">⏰ Horario Feria ⏰</a>
   </div>
 
